--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,116 +1,81 @@
-.container {
-  padding: 0 2rem;
+.homeWrapper {
+    background-color: #F8F8F8; 
+    font-family: 'Lato', sans-serif;
+    height: 100vh;
+    width: 100vw;
 }
 
-.main {
-  min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+.name {
+    padding-top: 150px;
+    padding-left: 200px;
+    font-size: 80px;
+    font-weight: 600;
+    background-color: #AEC1F0;
+    overflow: hidden;
+    background-image: linear-gradient(45deg, #AEC1F0, #899FD0);
+    background-size: 100%;
+    background-clip: text;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent; 
+    -moz-text-fill-color: transparent;
 }
 
-.footer {
-  display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
+.line {
+    border-top: 3px solid #AEC1F0;
+    width: 80%;
+    margin-left: 50px;
+    margin-top: 40px;
 }
 
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
+.content{
+    display: flex;
+    text-align: center;
 }
 
-.title a {
-  color: #0070f3;
-  text-decoration: none;
+.aboutme {
+    margin-left: 200px;
+    margin-top: 50px;
+    color: #AEC1F0;
+    font-size: 30px;
+    min-width: 550px;
+    width: 720px;
+    display: inline-block;
+    text-align: left;
 }
 
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
+.accent {
+    color: #FC94A1;
 }
 
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
+
+.learnmore {
+    margin-left: 200px;
+    margin-top: 25px;
+    border-radius: 25px;
+    width: 250px;
+    border: 3px solid #AEC1F0;
+    text-align: center;
 }
 
-.title,
-.description {
-  text-align: center;
-}
-
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-}
-
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
-}
-
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
-}
-
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
+.learnmore:hover {
+    transform: scale(1.1); 
   }
+
+.learnmore a {
+    text-decoration: none;
+    color: #AEC1F0;
+    display:inline-block;
+    height: 100%;
+    width: 100%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    font-size: 40px;
+    font-weight: 500;
+}
+
+.image {
+    margin-left: 100px;
+    min-width: 506px;
+    min-height: 270px;
 }
