--- a/styles/Research.module.css
+++ b/styles/Research.module.css
@@ -23,9 +23,7 @@
 }
 
 .body {
-    margin: 50px;
-    display: grid;
-    grid-template-columns: repeat(auto-fill, 325px);
-    justify-content: center;
-    grid-gap: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
