--- a/styles/Paper.module.css
+++ b/styles/Paper.module.css
@@ -6,12 +6,41 @@
     border-radius: 15px;
     overflow: hidden;
     padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 20px;
+    color: #899FD0;
+}
+
+.box h3 {
+    font-weight: 500;
 }
 
 .box:hover {
-    outline: 2px solid #AEC1F0;
+    outline: 2px solid #899FD0;
 }
 
 .box h3 {
     font-style: italic;
+}
+
+.links {
+    display: flex;
+    color: #899FD0;
+}
+
+.links a {
+    margin: 10px;
+    padding: 10px 20px 10px 20px;
+    background-color: #AEC1F0;
+    font-weight: 600;
+    border-radius: 5px;
+    text-decoration: none;
+}
+
+.links a:visited {
+    color: inherit;
+}
+
+.links a:hover {
+    outline: 2px solid #899FD0;
 }
