--- a/styles/Project.module.css
+++ b/styles/Project.module.css
@@ -1,6 +1,6 @@
 .box {
     height: 400px;
-    border: 1px solid #AEC1F0;
+    outline: 2px solid #AEC1F0;
     box-shadow: 1px 1px #AEC1F0;
     border-radius: 15px;
     overflow: hidden;
@@ -8,7 +8,7 @@
 
 .box:hover {
     transform: scale(1.05); 
-    box-shadow: 2px 2px #AEC1F0;
+    box-shadow: 3px 3px #AEC1F0;
 }
 
 .imageContainer {
