--- a/styles/Personal.module.css
+++ b/styles/Personal.module.css
@@ -23,7 +23,8 @@
 }
 
 .body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    margin-top: 70px;
+    text-align: center;
+    font-size: 60px;
+    color: #AEC1F0; 
 }
