--- a/styles/Paper.module.css
+++ b/styles/Paper.module.css
@@ -2,7 +2,7 @@
     margin-top: 50px;
     width: 70%;
     height: auto;
-    background-color: #E9E8EE;
+    background-color: #E9E8EE80;
     border-radius: 15px;
     overflow: hidden;
     padding-left: 20px;
@@ -31,7 +31,7 @@
 .links a {
     margin: 10px;
     padding: 10px 20px 10px 20px;
-    background-color: #AEC1F0;
+    background-color: #AEC1F080;
     font-weight: 600;
     border-radius: 5px;
     text-decoration: none;
