--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -3,8 +3,7 @@
     flex-direction: column;
     font-family: 'Lato', sans-serif;
     background: #f1f0f5;
-    min-width: 400px;
-    width: 400px;
+    width: 19vw;
     height: 100vh;
     margin:0;
     padding: 0;
@@ -12,34 +11,39 @@
     align-items: center;
 }
 
-.ears {
-    margin-top: 40px;
-    margin-bottom: -5px;
+.earsWrapper {
+    margin-top: 3vh;
+    height: 0;
+    padding-bottom: 40%;
+    width: 40%;
+    position: relative;
 }
 
 .profile {
     margin: 0;
-    height: 230px;
-    min-height:230px;
-    width: 230px;
+    height: 0;
+    width: 55%;
+    padding-bottom: 55%; 
     border: 2px solid #CCC;
-    border-radius: 50px;
+    border-radius: 2vw;
     overflow: hidden;
 }
 
 .navbar__list {
-    margin-top: 50px;
-    margin-bottom: 0px;
-    font-size: 26px;
+    margin-top: 5vh;
+    margin-bottom: 0vh;
+    width: 60%;
+    font-size: 120%;
     padding: 0;
     list-style-type: none;
 }
 
 .navbar__list li {
-    border: 3px solid #899FD0;
+    border: 2px solid #899FD0;
     background: transparent;
-    margin-bottom: 50px;
-    border-radius: 25px;
+    margin-bottom: 4vh;
+    border-radius: 2vh;
+    height: 10%;
     align-items: center;
 }
 
@@ -51,29 +55,32 @@
     text-decoration: none;
     color: #899FD0;
     display:inline-block;
-    padding-left: 70px;
-    padding-right: 70px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-top: 1vh;
+    padding-bottom: 1vh;
 }
 
 .contact {
-    font-size: 20px;
+    font-size: 1em;
     color: #899FD0;
 }
 
 .contact h3 {
-    margin-bottom: 0px;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 .contact p {
-    margin-top: 10px;
+    margin-top: 1vh;
 }
 
 .icons {
     display: flex;
-    margin-top: 20px;
+    margin-top: 1vh;
     width: 50%;
     justify-content: space-between;
+}
+
+.icon {
+    font-size: 3.5vh;
 }
 
