--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -33,7 +33,7 @@
     margin-top: 10%;
     margin-bottom: 0;
     width: 60%;
-    font-size: 120%;
+    font-size: 110%;
     padding: 0;
     list-style-type: none;
 }
@@ -41,9 +41,8 @@
 .navbar__list li {
     border: 2px solid #899FD0;
     background: transparent;
-    margin-bottom: 20%;
+    margin-bottom: 18%;
     border-radius: 1vw;
-    height: 10%;
     align-items: center;
 }
 
@@ -60,6 +59,7 @@
 }
 
 .contact {
+    margin-top: 5%;
     font-size: 100%;
     color: #899FD0;
 }
