--- a/styles/Research.module.css
+++ b/styles/Research.module.css
@@ -8,9 +8,9 @@
 }
 
 .name {
-    padding-top: 20vh;
-    padding-left: 20vw;
-    font-size: 1em;
+    padding-top: 150px;
+    padding-left: 200px;
+    font-size: 80px;
     font-weight: 600;
     color: #AEC1F0;
 }
