--- a/styles/Personal.module.css
+++ b/styles/Personal.module.css
@@ -24,7 +24,8 @@
 
 .body {
     margin-top: 70px;
-    text-align: center;
-    font-size: 60px;
+    margin-left: 200px;
+    text-align: left;
+    font-size: 1.5em;
     color: #AEC1F0; 
 }
